tslib 1.16 - released tba
================================
This release includes libts version 0.9.1 and the following changes:
* `module_raw tatung` is now disabled in the default build config. Users must
  `./configure --enable-tatung` if they rely on it.
* new `module_raw one-wire-ts-input` for FriedlyARM devices

This release includes the following bugfixes:
* efcba6e ts_uinput: (fix for Android) write only one input_event at a time
* e63f33f invert: fix ts_read() iteration over multiple samples
* 932bb4f ts_uinput: fail for unsupported old kernel versions


tslib 1.15 - released 2018-01-11
================================

This release includes libts version 0.9.0 and the following changes:
* New ts_get_eventpath() API to learn the opened device file path
* ts_test_mt shows the number of supported concurrent touch contacts
* New filter module "invert"
* ts_uinput: fallback to fb0 and new option --nofb

This release includes the following bugfixes:
* 47fb616 ts_test_mt: avoid a flickering cross in the center
* 249d814 input-raw: remove eGalax version 0112 workaround
* 6975733 input-raw: mark BTN_TOUCH code valid
* fbeabc6 input-raw: fix pen_up for non-pressure devices


tslib 1.14 - released 2017-11-12
================================

This release includes libts version 0.8.1 and the following changes:
* The following modules are now disabled in the default configuration run:
 * `module_raw arctic2`
 * `module_raw corgi`
 * `module_raw collie`
 * `module_raw dmc`
 * `module_raw h3600`
 * `module_raw mk712`
 * `module_raw ucb1x00`
 Users of those modules must enable them, like `./configure --enable-arctic2`
* Automatic touchscreen device detection for Linux (if not defined by the user)
* New filter plugin "lowpass"
* SPDX license identifiers in all C source files

This release includes the following bugfixes:
* 93ac81d autoconf: disable dependency tracking by default (fixes out-of-source builds)