@@ -1,0 +1,41 @@
+.\" Copyright (c) 2018, Martin Kepplinger <martink@posteo.de>
+.\"
+.\" %%%LICENSE_START(GPLv2+_DOC_FULL)
+.\" This is free documentation; you can redistribute it and/or
+.\" modify it under the terms of the GNU General Public License as
+.\" published by the Free Software Foundation; either version 2 of
+.\" the License, or (at your option) any later version.
+.\"
+.\" The GNU General Public License's references to "object code"
+.\" and "executables" are to be interpreted as the output of any
+.\" document formatting or typesetting system, including
+.\" intermediate and printed output.
+.\"
+.\" This manual is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public
+.\" License along with this manual; if not, see
+.\" <http://www.gnu.org/licenses/>.
+.\" %%%LICENSE_END
+.\"
+.TH TSLIB_VERSION 3  "" "" "tslib"
+.SH NAME
+tslib_version \- simply return tslib's version string
+.SH SYNOPSIS
+.nf
+.B #include <tslib.h>
+.sp
+.BI "char *tslib_version();"
+.sp
+.fi
+
+.SH DESCRIPTION
+.BR tslib_version ()
+This function returns a static string holding tslib's version information.
+
+.SH SEE ALSO
+.BR ts_libversion (3),
+.BR ts.conf (5)
