@@ -13,6 +13,7 @@
  * file for details.
  */
 #include <stdlib.h>
+#include <stdio.h>
 #include "config.h"
 #include "tslib.h"
 
@@ -51,4 +52,21 @@ struct ts_lib_version_data *ts_libversion(void)
 	initialized = 1;
 
 	return &version_data;
+}
+
+/* remember our library version value is 24 bit. 8 bit per library version */
+char *tslib_version(void)
+{
+	static char version[100];
+	struct ts_lib_version_data *ver = ts_libversion();
+	static short initialized;
+
+	if (initialized)
+		return version;
+
+	snprintf(version, sizeof(version),
+		"tslib %s / libts ABI version %d (0x%06X)",
+		ver->package_version, ver->version_num >> 16, ver->version_num);
+
+	return version;
 }
